--- a/styles.css
+++ b/styles.css
@@ -3,11 +3,9 @@
 div{
 	width:200px;
 	background-color:purple;
-	border-left-color:green;
-	border-left:5px;
 	padding:10px;
 	font-size:20px;
-}
-header{
 	color:white;
+	border-left:6px solid green
+	
 }
